In development:
	* Unhide the tweet client and time info after reply
	* Fixed email parsing as a screen_name
	* Now Twic is even faster than before

0.23:
	* Fix for unread tweets count marker

0.22:
	* Friends storage rewritten
	* Resettings the last tweet id after account removement

0.21:
	* Fixed the hash replace for urls like test.dom/#hash
	* Pulsate the add account button when no account registered (waiting for CSSO to support webkit keyframes)
	* Reply to the retweet is the reply to retweeter

0.20:
	* Fixing a first extension initialization possible bug

0.19:
	* Goog object is not available in developer version of Google Chrome

0.18:
	* User nick is moved to the right top on the profile page
	* Bug with automatic Twic authorization on the pages for another applications is fixed
	* Small things in interface
	* Hope the bug with first authorization and OAuth timestamp is finally fixed

0.17:
	* New tweet editor is now smaller on blur
	* "Insert link" button is now disabled if we can't do it
	+ Displaying the tweet time (optional, disabled by default)
	+ Displaying the user Twitter client in tweet (optional, disabled by default)
	+ Settings button on the first page
	- Donate button
	+ Additional "locked" icon in protected user profiles
	* Retweet button is disabled for the protected user tweets
	* Additional tweet info is hidden while replying

0.16:
	* Fix for the urls without protocol (thanks @Stammru)
	+ Separator between unread and old tweets

0.15:
	* Fix for the error message is not showing

0.14:
	+ Error message if extension can't add a new account
	+ Open the new not focused tab with middle button mouse click (or with metaKey + click in MacOS)
	* Popup resized from 350px to 400px in width
	+ Foursquare links are looks like an icon now
	* Hope bug with horizontal scroll on Windows with bigger fonts is fixed
	+ Button to insert the current page link into the tweet
	+ Options page
	+ Ability to change the avatar size in the home timeline

0.13: